src/objects/Coupons__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Coupons</relationshipLabel>
        <relationshipName>Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Date__c</fullName>
        <label>Cash Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cashed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cashed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Rebate in kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Finishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lenses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Pair__c</fullName>
        <label>Value (Pair)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Coupon</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coupons Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>